cue.mod/gen/github.com/kasuboski/k8s-gitops/media/v1_service_prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
  name: prowlarr
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/name: prowlarr
