cue.mod/gen/github.com/kasuboski/k8s-gitops/media/v1_service_qbittorrent.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent
    app.kubernetes.io/name: qbittorrent
  name: qbittorrent
spec:
  ports:
  - name: http
    port: 80
    targetPort: web
  selector:
    app.kubernetes.io/name: qbittorrent
