cue.mod/gen/github.com/kasuboski/k8s-gitops/media/networking.k8s.io_v1_ingress_qbittorrent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: qbittorrent
  name: qbittorrent
spec:
  ingressClassName: external-nginx
  rules:
  - host: qbittorrent.joshcorp.co
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - qbittorrent.joshcorp.co
    secretName: qbittorrent-joshcorp-tls
