cue.mod/gen/github.com/kasuboski/k8s-gitops/media/networking.k8s.io_v1_ingress_sabnzbd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: sabnzbd
  name: sabnzbd
spec:
  ingressClassName: external-nginx
  rules:
  - host: sabnzbd.joshcorp.co
    http:
      paths:
      - backend:
          service:
            name: sabnzbd
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sabnzbd.joshcorp.co
    secretName: sabnzbd-joshcorp-tls
